Вывод сколько раз использовалось оборудование

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,22 @@ sorl-thumbnail
 Pillow
 django-nested-admin
 django-registration
+click==6.7
+comtypes==1.1.4
+eventlet==0.23.0
+Flask==1.0.2
+Flask-Cors==3.0.6
+Flask-SocketIO==3.0.1
+future==0.16.0
+greenlet==0.4.14
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+pyad==0.5.16
+python-engineio==2.2.0
+python-socketio==2.0.0
+pytz==2018.4
+pywin32==223
+pyzk==0.6
+six==1.11.0
+Werkzeug==0.14.1
